--- a/src/app/trainer-student-schedule/trainer-student-schedule.component.html
+++ b/src/app/trainer-student-schedule/trainer-student-schedule.component.html
@@ -1,42 +1,49 @@
-<!--Card group -->
-<div class="card-group">
 
-  <!-- Card -->
-  <div class="card mb-4" >
-   <!-- Card image -->
-    <div class="row">
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
+
+<!-- Section: Testimonials v.3 -->
+<section class="team-section text-center my-5" *ngIf="!loading">
+
+    <!-- Section heading -->
+    <h2 class="h1-responsive font-weight-bold my-5">Alumnos</h2>
+    <!-- Section description -->
+    <p class="dark-grey-text w-responsive mx-auto mb-5"><i class="fa fa-quote-left "></i>En esta seccion puedes observar el listado de alumnos relacionados
+      por cada horario dependiendo de una clase en la cual dictas<i class="fa fa-quote-right "></i>
+    </p>
+    <button type="button" class="btn btn-outline-info waves-effect px-13"><i class="fa fa-address-card"></i>generar listado</button>
+    <br>
+    <!--Grid row-->
+    <div class="row text-center" >
+  
       <!--Grid column-->
-      <div class="col-lg-12 col-md-12 mb-4">
-            <div class="text-center">
-                <div class="card testimonial-card">
-                  <!--Background color-->
-                  <div class="card-up blue lighten-2">
-                  </div>
-                  <!--Avatar-->
-                  <div class="avatar mx-auto white">
-                    <img class="img-perfil rounded-circle img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/49.jpg" alt="avatar mx-auto white">
-                  </div>
-
-                </div>
+      <div class="col-md-4 mb-md-0 mb-5" *ngFor="let student of assistance; let i = index">
+  
+        <div class="testimonial">
+          <!--Avatar-->
+          <div class="avatar mx-auto" style="width: 200px;height: 200px;">
+            <img src="{{student.urlImagenUsuario}}" class="rounded-circle z-depth-1 img-fluid">
           </div>
-                </div>
+          <!--Content-->
+          <h4 class="font-weight-bold dark-grey-text mt-4">{{student.nombreAlumno}}</h4>
+          <h6 class="font-weight-bold blue-text my-3">{{student.emailAlumno}}</h6>
+          <p class="font-weight-normal dark-grey-text">
+            <i class="fa fa-phone"></i>{{student.telefonoAlumno}}</p>
+          <!--Review-->
+          <div class="orange-text">
+            <i class="fa fa-star"> </i>
+            <i class="fa fa-star"> </i>
+            <i class="fa fa-star"> </i>
+            <i class="fa fa-star"> </i>
+            <i class="fa fa-star"> </i>
           </div>
-
-    <!-- Card content -->
-    <div class="card-body">
-
-      <!-- Title -->
-      <h4 class="card-title">Card title</h4>
-      <!-- Text -->
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-      <button type="button" class="btn btn-primary btn-md"(click)= "openDialogShowMedicalHistory(null)">Read more</button>
-
+        </div>
+  
+      </div>
+      <!--Grid column-->
+  
+  
     </div>
-    <!-- Card content -->
-
-  </div>
-  <!-- Card -->
-
-</div>
-<!-- Card group-->
+    <!--Grid row-->
+  
+  </section>
+  <!-- Section: Testimonials v.3 -->
