--- a/src/app/trainer/class/trainer-class.component.html
+++ b/src/app/trainer/class/trainer-class.component.html
@@ -1,17 +1,21 @@
+<!--
+
 <div id="div-table" class="mat-elevation-z24">
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> #</th>
       <td mat-cell *matCellDef="let element"> {{element.position}}</td>
-    </ng-container>
+    </ng-container>-->
 
     <!--<ng-container matColumnDef="tipo">-->
       <!--<th mat-header-cell *matHeaderCellDef> Tipo</th>-->
       <!--<td mat-cell *matCellDef="let element"> {{element.servicio.nombreServicio}}</td>-->
     <!--</ng-container>-->
+<!--
 
-    <ng-container matColumnDef="entrenador">
+
+  <ng-container matColumnDef="entrenador">
       <th id="th-trainer" mat-header-cell *matHeaderCellDef> Entrenador</th>
       <td mat-cell *matCellDef="let element"> {{element.entrendor.nombreEntrenador}}</td>
     </ng-container>
@@ -72,3 +76,5 @@
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20, 40]" [pageSize]="20" showFirstLastButtons></mat-paginator>
 </div>
+
+-->
