--- a/src/app/dialogs/edit-trainer/dialog-edit-trainer.component.html
+++ b/src/app/dialogs/edit-trainer/dialog-edit-trainer.component.html
@@ -26,7 +26,8 @@
     </div>
 
     <div id="btnUser" class="modal-footer d-flex justify-content-center">
-      <button mdbBtn color="deep-orange" class="waves-light" (click)="saveImage()" mdbWavesEffect>Guardar Imagen</button>
+      <button mdbBtn color="cyan" class="waves-light" (click)="saveImage()" mdbWavesEffect>Guardar</button>
+      <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditPass()" mdbWavesEffect mat-dialog-close>Cancelar</button>
     </div>
   </div>
 
@@ -65,6 +66,7 @@
   </div>
 
   <div id="btnPerson" class="modal-footer d-flex justify-content-center">
-    <button mdbBtn color="deep-orange" class="waves-light" (click)="saveUser()" mdbWavesEffect>Guardar</button>
+    <button mdbBtn color="cyan" class="waves-light" (click)="saveUser()" mdbWavesEffect>Guardar</button>
+    <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditPass()" mdbWavesEffect mat-dialog-close>Cancelar</button>
   </div>
 </div>
