Arreglos al alumno

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,18 +66,18 @@
   </div>
 
   <div id="div-image-aboutOf"  data-aos="fade-down">
-    
+
     <mdb-card class="text-center " borderColor="border-info" style="background-color:#e9ecef">
         <mdb-card-header><h2 class="text-primary">Acerca de</h2></mdb-card-header>
-        
+
         <mdb-card-body>
 
             <mdb-card cascade="true" wider="true" reverse="true" class="my-4" style="background-color:#e9ecef">
-               
-              
+
+
                 <!-- Card content -->
                 <mdb-card-body cascade="true" class="text-center"style="background-color:#e9ecef" >
-              
+
                   <!--Title-->
                   <mdb-card-title>
                     <h4 >
@@ -90,11 +90,11 @@
                         desarrollo de una excelente calidad de vida</p>
                       </mdb-card-text>
                   </mdb-card-title>
-              
+
                   <h5 class="indigo-text">
                     <strong><h3 class="text-primary" data-aos="fade-right">Visión</h3></strong>
                   </h5>
-              
+
                   <mdb-card-text  >
                       <p data-aos="zoom-in-left">Crear un centro de acondicionamiento físico que tenga, las instalaciones, la maquinaria, la tecnología,
                           el
@@ -102,30 +102,30 @@
                           asesoría a sus
                           usuarios en el acondicionamiento físico</p>
                   </mdb-card-text>
-              
-                  
+
+
                 </mdb-card-body>
-              
+
               </mdb-card>
 
               </mdb-card-body>
             </mdb-card>
-            
+
   </div>
 
   <!-- News-->
   <mdb-card id="div-image-news" class="text-center" data-aos="fade-up" borderColor="border-info" >
-          
+
             <mdb-card-body>
 
                 <mdb-card cascade="true" wider="true" reverse="true" class="my-4">
-               
-              
+
+
                     <!-- Card content -->
                     <mdb-card-body cascade="true" class="text-center" >
 
                         <mdb-card-text >
-                              
+
                                   <h2 class="text-primary" >Noticias</h2>
                                   <div class="myslides" >
                                     <ngx-hm-carousel [(ngModel)]="configCarousel.index" [autoplay-speed]="configCarousel.speed" [autoplay]="configCarousel.autoplay"
@@ -172,15 +172,15 @@
                                       </ng-template>
 
                                     </ngx-hm-carousel>
-                                  
+
                                 </div>
                         </mdb-card-text>
                     </mdb-card-body>
-              
+
                 </mdb-card>
-           
+
           </mdb-card-body>
-          
+
   </mdb-card>
 
   <div style="text-align: center; margin-top: 5em;" data-aos="fade-right">
@@ -231,7 +231,7 @@
     <!--<td>{{dessert.value}}</td>-->
     <!--</tr>-->
     <!--</table>-->
-    
+
   </div>
 
   <footer id="div-image-contact" data-aos="fade-up"
@@ -245,52 +245,44 @@
       <!-- Grid row-->
       <div class="row">
 
-        <!-- Grid column -->
+    <!--
         <div class="col-md-12 py-5 text-center" >
           <div class="mb-5 flex-center">
 
-            <!-- Facebook -->
             <a class="fb-ic">
                 <i class="fa fa-facebook-official white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
-            <!-- Twitter -->
             <a class="tw-ic">
                 <i class="fa fa-twitter white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
-            <!-- Google +-->
             <a class="gplus-ic">
                 <i class="fa fa-google-plus white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
-            <!--Linkedin -->
             <a class="li-ic">
                 <i class="fa fa-linkedin white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
-            <!--Instagram-->
             <a class="ins-ic">
                 <i class="fa fa-instagram white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
-            <!--Pinterest-->
             <a class="pin-ic">
                 <i class="fa fa-pinterest-square white-text mr-md-5 mr-3" style="font-size:2em;" aria-hidden="true"></i>
             </a>
           </div>
         </div>
-        <!-- Grid column -->
 
       </div>
-      <!-- Grid row-->
-      
+
     </div>
-    <!-- Footer Elements -->
+    Footer Elements -->
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2018 Copyright:
-        <p>Posted by: Hege Refsnes</p>
+        <p>Body Fitness Gym</p>
         <p>Contact information: <a href="mailto:someone@example.com">
             someone@example.com</a>.</p>
     </div>
     <!-- Copyright -->
-    
+
     <script>
         AOS.init();
       </script>
