--- a/src/app/student-progress/student-progress.component.html
+++ b/src/app/student-progress/student-progress.component.html
@@ -8,7 +8,7 @@
   </button>
 
   <button type="button" class="btn btn-info btn-rounded btn-md" (click)="generatePdf()">
-    Generar Pdf <i class="fa fa-plus " aria-hidden="true"></i>
+    Generar Pdf <i class="fa fa-file" aria-hidden="true"></i>
   </button>
   <div class="card-deck">
     <!--Card-->
@@ -17,20 +17,6 @@
       <div class="view view-cascade  gradient-card-header purple-gradient">
         <h2 class="card-header-title">Masa Corporal</h2>
         <p>Progresos</p>
-        <div class="text-center">
-          <!--Facebook-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-facebook-f"></i>
-          </a>
-          <!--Twitter-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-twitter"></i>
-          </a>
-          <!--Google +-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-google-plus"></i>
-          </a>
-        </div>
       </div>
 
       <mdb-card-body cascade="true" class="text-center">
@@ -50,20 +36,6 @@
       <div class="view view-cascade  gradient-card-header purple-gradient">
         <h2 class="card-header-title">Grasa Corporal</h2>
         <p>Progresos</p>
-        <div class="text-center">
-          <!--Facebook-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-facebook-f"></i>
-          </a>
-          <!--Twitter-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-twitter"></i>
-          </a>
-          <!--Google +-->
-          <a type="button" class="btn-floating btn-small waves-light" mdbWavesEffect>
-            <i class="fa fa-google-plus"></i>
-          </a>
-        </div>
       </div>
 
       <mdb-card-body cascade="true" class="text-center">
