Souccion login trainer

--- a/src/app/dialogs/edit-trainer/dialog-edit-trainer.component.html
+++ b/src/app/dialogs/edit-trainer/dialog-edit-trainer.component.html
@@ -11,7 +11,7 @@
 
     <div id="btnUser" class="modal-footer d-flex justify-content-center">
       <button mdbBtn color="cyan" class="waves-light" (click)="saveImage()" mdbWavesEffect>Guardar</button>
-      <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditPass()" mdbWavesEffect mat-dialog-close>Cancelar</button>
+      <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditUser()" mdbWavesEffect mat-dialog-close>Cancelar</button>
     </div>
   </div>
 
@@ -45,6 +45,6 @@
 
   <div id="btnPerson" class="modal-footer d-flex justify-content-center">
     <button mdbBtn color="cyan" class="waves-light" (click)="saveUser()" mdbWavesEffect>Guardar</button>
-    <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditPass()" mdbWavesEffect mat-dialog-close>Cancelar</button>
+    <button mdbBtn color="light" class="waves-light" (click)="closeDialogEditUser()" mdbWavesEffect mat-dialog-close>Cancelar</button>
   </div>
 </div>
