--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -276,10 +276,10 @@
     Footer Elements -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
         <p>Body Fitness Gym</p>
-        <p>Contact information: <a href="mailto:someone@example.com">
-            someone@example.com</a>.</p>
+        <p>Contacto: <a href="mailto:srfeudalwow@gmail.com">
+            srfeudalwow@gmail.com</a>.</p>
     </div>
     <!-- Copyright -->
 
