se corrigio contacto, noticias y servicios

--- a/src/app/dialogs/service/dialog-service.component.html
+++ b/src/app/dialogs/service/dialog-service.component.html
@@ -5,8 +5,8 @@
 </mat-toolbar>
 <br>
 <mat-dialog-content class="mat-typography">
-  <div>
-    <img src="{{data.image}}">
-    <p>{{data.descripcionServicio}}</p>
-  </div>
+  <!--<div>-->
+    <!--<img src="{{data.image}}">-->
+    <p style="text-align: justify;">{{data.descripcionServicio}}</p>
+  <!--</div>-->
 </mat-dialog-content>
