se agrego contacto de la empresa

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -279,7 +279,7 @@
     <div class="footer-copyright text-center py-3">© 2019 Copyright:
         <p>Body Fitness Gym</p>
         <p>Correo de contacto (Peticiones, Quejas, Reclamos, Sugerencias): <a href="mailto:cesar.cardozo@uptc.edu.co">
-          cesar.cardozo@uptc.edu.co</a>.</p>
+          bodyFinesgym2019@yahoo.com</a>.</p>
     </div>
     <!-- Copyright -->
 
