--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -278,7 +278,7 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2019 Copyright:
         <p>Body Fitness Gym</p>
-        <p>Correo de contacto (Peticiones, Quejas, Reclamos, Sugerencias): <a href="mailto:cesar.cardozo@uptc.edu.co">
+        <p>Correo de contacto (Peticiones, Quejas, Reclamos, Sugerencias): <a href="mailto:bodyFinesgym2019@yahoo.com">
           bodyFinesgym2019@yahoo.com</a>.</p>
     </div>
     <!-- Copyright -->
